fixed the bug in check out

--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -45,7 +45,7 @@
                   <li class="text-center hover ps-3 pe-3"><a class=" " href="/user/brand?brand=converse">CONVERSE</a></li>
                 </ul>
               </div>
-              <div class="offcanvas offcanvas-start bg-dark" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel" data-bs-scroll="true" style="overflow: visible;">
+              <div class="offcanvas offcanvas-start bg-dark" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel" data-bs-scroll="false" >
                 <div class="offcanvas-header">
                   <h5 class="offcanvas-title text-center text-light capitalizeFirst" id="staticBackdropLabel" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 200px;"><i class="fa-regular fa-circle-user me-2 fs-4 my-auto"></i>
                   <span class="userName"></span></h5>
