--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -6,37 +6,39 @@
 <body>
     <%- include('../layout/header') %>
     <div class="container mt-5"><h3 class="mb-4 text-center mb-3" style="font-family: 'Michroma', sans-serif;">Hello <%=user.name%>!</h3></div>
-    <div class="container mt-2 mb-5" style="font-family: 'Michroma', sans-serif; border: 1px solid rgb(196, 196, 196); border-radius: 20px; padding: 10px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);">
-
-        <div class="row mt-4 ">
-            <div class="col-12 col-sm-3 d-flex justify-content-center align-items-center">
-                <div style=" padding: 30px; ">
-                    <i class="bi bi-person-check display-1"></i>
+    <div class="container">
+        <div class="m-4" style="font-family: 'Michroma', sans-serif; border: 1px solid rgb(196, 196, 196); border-radius: 20px;padding: 10px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);">
+            <div class="row mt-4 ">
+                <div class="col-12 col-sm-3 d-flex justify-content-center align-items-center">
+                    <div style=" padding: 30px; ">
+                        <i class="bi bi-person-check display-1"></i>
+                    </div>
+                </div>
+                <div class="mt-2 col-12 col-sm-9 d-flex" style="flex-direction: column; row-gap: 20px; font-family: 'Michroma', sans-serif;">
+                    <div class="d-flex" style="align-items: center; flex-wrap: wrap;">
+                        <span class="btn btn-dark rounded" style="flex: 0 0 50px;"><h6><i class="fa-solid fa-signature"></i> </h6></span>
+                        <span style="flex: 1; text-align: start; margin-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><%=user.name%></span>
+                    </div>
+                    <div class="d-flex" style="align-items: center; flex-wrap: wrap;">
+                        <span class="btn btn-dark rounded" style="flex: 0 0 50px;"><h6><i class="fa-regular fa-envelope"></i> </h6></span>
+                        <span style="flex: 1; text-align: start; margin-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><%=user.email%></span>
+                    </div>
+                    <div class="d-flex" style="align-items: center; flex-wrap: wrap;">
+                        <span class="btn btn-dark rounded" style="flex: 0 0 50px;"><h6><i class="fa-solid fa-phone"></i></h6></span>
+                        <span style="flex: 1; text-align: start; margin-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><%=user.contact%></span>
+                    </div>
                 </div>
             </div>
-            <div class="mt-2 col-12 col-sm-9 d-flex" style="flex-direction: column; row-gap: 20px; font-family: 'Michroma', sans-serif;">
-                <div class="d-flex" style="align-items: center; flex-wrap: wrap;">
-                    <span class="btn btn-dark rounded" style="flex: 0 0 50px;"><h6><i class="fa-solid fa-signature"></i> </h6></span>
-                    <span style="flex: 1; text-align: start; margin-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><%=user.name%></span>
-                </div>
-                <div class="d-flex" style="align-items: center; flex-wrap: wrap;">
-                    <span class="btn btn-dark rounded" style="flex: 0 0 50px;"><h6><i class="fa-regular fa-envelope"></i> </h6></span>
-                    <span style="flex: 1; text-align: start; margin-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><%=user.email%></span>
-                </div>
-                <div class="d-flex" style="align-items: center; flex-wrap: wrap;">
-                    <span class="btn btn-dark rounded" style="flex: 0 0 50px;"><h6><i class="fa-solid fa-phone"></i></h6></span>
-                    <span style="flex: 1; text-align: start; margin-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><%=user.contact%></span>
-                </div>
-            </div>
+            
+            <div class="d-flex" style="justify-content: end;">
+            <a href="/user/editProfile" style="text-decoration: none; color: white;"><button class="btn btn-dark pt-2 pb-2 ps-1 pe-1 mt-3 me-2"><i class="fa-solid fa-pencil  px-2"></i></button></a>
+            <a href="/user/changePassword" style="text-decoration: none; color: white;"><button class="btn btn-dark pt-2 pb-2 ps-1 pe-1 mt-3">Change Password</button></div></a>
         </div>
-        
-        <div class="d-flex" style="justify-content: end;">
-        <a href="/user/editProfile" style="text-decoration: none; color: white;"><button class="btn btn-dark pt-2 pb-2 ps-1 pe-1 mt-3 me-2"><i class="fa-solid fa-pencil  px-2"></i></button></a>
-        <a href="/user/changePassword" style="text-decoration: none; color: white;"><button class="btn btn-dark pt-2 pb-2 ps-1 pe-1 mt-3">Change Password</button></div></a>
     </div>
 
     <%if(user.referralCode){%>
         <h3 class="mt-2 container text-start mb-3 text-dark" style="font-family: 'Michroma', sans-serif;"><i class=" ms-2 fas fa-tag me-2"></i> Offer  Zone. !</h3>
+       <div class="container d-flex justify-content-center">
         <div class="referral-container card" style="padding: 20px !important;">
             <img src="../../public/images/designstripe-twitter-post.png" alt="Image" style="border-radius: 30px; margin-bottom: 20px; width: 100%;">
             <%if(user.referralsApplied<=3){%>
@@ -60,6 +62,7 @@
                     <b>Total Earnings : </b> &#x20B9; <%=((user.referralsApplied)*500)%>
                 </div>
           </div>
+       </div>
     <%}%>
 
     <div class="container mb-2" style="font-family: 'Michroma', sans-serif;">
