--- a/views/admin/dashBoard.ejs
+++ b/views/admin/dashBoard.ejs
@@ -105,7 +105,7 @@
           });
       </script>
     </div>
-      <canvas id="myChart" style="width:100%; max-width:1000 px"></canvas>
+      <canvas id="myChart" style="width:100%; max-width:1000 px; max-height: 700px;"></canvas>
     </div>
     <div class="modal fade" id="datepickerModal" tabindex="-1" role="dialog" aria-labelledby="datepickerModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
