--- a/views/admin/editCoupon.ejs
+++ b/views/admin/editCoupon.ejs
@@ -18,7 +18,7 @@
                     <h2 class="text-center">Edit Coupon</h2>
                 </div>
                 <div class="row" style="display: flex; justify-content: center;" >
-                    <div class="col-md-4">
+                    <div class="col-md-4 w-100" style="max-width: 600px;">
                         <form class="row g-3 needs-validation" novalidate enctype="application/form-data">
                             <div class="col-md-12">
                                 <label for="validationCustom01" class="form-label">Code</label>
