--- a/public/css/table.css
+++ b/public/css/table.css
@@ -31,3 +31,10 @@
     color: rgb(0, 0, 0) !important;
     border: 1px solid grey !important;
   }
+
+  @media(max-width:767px){
+    #hideTableRow,
+    #imageTableRow{
+      display: none !important;
+    }
+  }
