--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -29,7 +29,7 @@
                     <%var pros=order.products.items.length-1%>
                     <% order.products.items.forEach((item, index) => { %>
                         <% if (index === 0) { %>
-                          <td style="width: 100%; text-align: center; display: grid; place-items: center; ">
+                          <td style="width: 100%; text-align: center; display: grid; place-items: center; "  id="hideTableRow">
                             <a href="/user/orderDetailed?id=<%= order._id %>">
                               <img style="border-radius: 20px; margin-top: 10px; max-width: 150px;" src="<%= item.product.images[0] %>" alt="Product Image" class="card-img-top">
                             </a>
