--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -98,7 +98,7 @@
                             <div class="input-group">
                               <input type="text" class="form-control border-dark" name="search" placeholder="Search Product" style="min-width: 100px;" id="searchInput">
                               <button type="reset" class="btn border-dark-subtle" id="clearSearch" onclick="clearSearchInput()" style="background: white;">
-                                  <i class="bi bi-x-lg"></i>
+                                  <i class="bi bi-x-lg clearSearchButtonHeader"></i>
                               </button>
                             </div>
                         <% } %>
