--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -88,9 +88,10 @@
                 </div>
             <% })} %>
             <% if(locals.products.length===0) { %>
-                <div class="col rounded border border-dark">
+                <div class="col rounded border border-dark" style="border-radius: 20px !important;">
                     <p class="text-center text-danger pt-5 pb-5 mainFontFamily" style="font-size: 25px;">
                         <u>Your cart is empty!</u>
+                        <a href="/user/home" class="mt-3" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn border border-black  btn-warning  rounded py-3 px-3">Continue Shopping</span></a>
                     </p>
                 </div>
             <% } %>
@@ -105,7 +106,7 @@
                 <%}%>
                 <div class="d-flex justify-content-center align-items-center ">
                     <a class="text-center  btn btn-dark d-flex flex-column justify-content-center mt-4 pt-3 pb-3 ps-4 pe-4" style="width: fit-content; display: none !important;" id="notAvailableShow">
-                        <h4 class="mainFontFamily text-danger ">Cart Contain Unavailable Product</h4>
+                        <h4 class="mainFontFamily text-danger py-3 ">Remove Unavailable Product</h4>
                     </a>
                 </div>
         </div>
