Implement opacity toggle with hover effect

--- a/public/css/card.css
+++ b/public/css/card.css
@@ -40,6 +40,7 @@
 
     }
    .card:hover .productImageMain2 {
+       border-radius: 30px !important;
      transform: scale(1.08);
         opacity: 0;
     }
