--- a/views/user/homePage.ejs
+++ b/views/user/homePage.ejs
@@ -96,6 +96,30 @@
             <% }) %>
     </div>
 </div>
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const productImageMain2 = document.querySelectorAll('.productImageMain2');
+        let isMouseOver = false;
+
+        productImageMain2.forEach((element) => {
+            element.addEventListener('mouseenter', () => {
+                isMouseOver = true;
+            });
+
+            element.addEventListener('mouseleave', () => {
+                isMouseOver = false;
+            });
+        });
+
+        setInterval(() => {
+            if (!isMouseOver) {
+                productImageMain2.forEach((element) => {
+                    element.style.opacity = (element.style.opacity === '1') ? '0' : '1';
+                });
+            }
+        }, 1500);
+    });
+</script>
 <script src="../../public/jsFiles/addToWishlist.js"></script>
 <%-include("../layout/adText")%>
 <%-include("../layout/alert")%>
