--- a/public/css/header.css
+++ b/public/css/header.css
@@ -446,3 +446,7 @@ h5 {
   border: 1px solid rgba(49, 49, 49, 0.715);
   color: white !important;
 }
+
+.searchInputField{
+  border: 1px solid rgb(255, 255, 255) !important;
+}
