--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -117,6 +117,7 @@
         <% } else { %>
             <div class="col">
                 <p class="text-center display-6 mainFontFamily"><u>No products.</u></p>
+                <a href="/user/allProducts" class="mt-3" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn border border-black  btn-warning  rounded py-3 px-3 mainFontFamily">Continue Shopping</span></a>
             </div>
         <% } %>
     </div>
