--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -91,7 +91,7 @@
                 <div class="col rounded border border-dark" style="border-radius: 20px !important;">
                     <p class="text-center text-danger pt-5 pb-5 mainFontFamily" style="font-size: 25px;">
                         <u>Your cart is empty!</u>
-                        <a href="/user/home" class="mt-3" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn border border-black  btn-warning  rounded py-3 px-3">Continue Shopping</span></a>
+                        <a href="/user/allProducts" class="mt-3" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn border border-black  btn-warning  rounded py-3 px-3">Continue Shopping</span></a>
                     </p>
                 </div>
             <% } %>
