--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -84,7 +84,7 @@
                         <div class="col" style="border: 1px solid black; border-radius: 20px;" >
                             <p class="text-center text-danger pt-5 pb-5" style="font-size: 25px; font-family: 'Michroma', sans-serif;">
                                 <u>Your wishlist is empty!</u>
-                                <a href="/user/home" class="mt-3" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn border border-black  btn-warning  rounded py-3 px-3">Continue Shopping</span></a>
+                                <a href="/user/allProducts" class="mt-3" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn border border-black  btn-warning  rounded py-3 px-3">Continue Shopping</span></a>
                             </p>
                             
                         </div>
