--- a/views/user/homePage.ejs
+++ b/views/user/homePage.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
 <%- include('../layout/header')-%>
-    <div class="container margineTop">
+    <div class="container margineTop homeMarginTop">
         <div class="row">
             <div class="col-12 imageContainer" id="imageContainer1">
                 <img src="../../public/images/people-collaborating-with-tech- (1).png" class="img-fluid firstImage" alt="..." style="border-radius: 20px; ">
@@ -99,6 +99,7 @@
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         const productImageMain2 = document.querySelectorAll('.productImageMain2');
+        const firstImage = document.querySelector('.firstImage');
         let isMouseOver = false;
 
         productImageMain2.forEach((element) => {
@@ -110,8 +111,16 @@
                 isMouseOver = false;
             });
         });
-
+      
         setInterval(() => {
+            var currentOpacity = window.getComputedStyle(firstImage).getPropertyValue('opacity');
+            if (currentOpacity === '1') {
+                firstImage.style.opacity = '0.9999';
+                firstImage.style.transform = 'scale(1.08)';
+            } else {
+                firstImage.style.opacity = '1';
+                firstImage.style.transform = 'scale(1)';
+            }
             if (!isMouseOver) {
                 productImageMain2.forEach((element) => {
                     element.style.opacity = (element.style.opacity === '1') ? '0' : '1';
