--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -87,6 +87,8 @@
 @media (max-width: 991.98px) {
     .imageText {
       margin-top: -40px;
+      margin-left: 15px;
+      margin-right: 15px;
       margin-bottom: -10px;
         position: static;
         transform: none;
