--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -49,10 +49,10 @@
                             </div>
                             <div class="footer-social-icon">
                                 <span>Follow us</span>
-                                <a href="#"><i class="fa-brands fa-facebook fs-4"></i></a>
-                                <a href="#"><i class="fa-brands fa-x-twitter fs-4"></i></a>
-                                <a href="#"><i class="fa-brands fa-instagram fs-4"></i></a>
-                                <a href="#"><i class="fa-brands fa-google-plus-g fs-4"></i></a>
+                                <a href="#"><i class="text-dark fa-brands fa-facebook fs-4"></i></a>
+                                <a href="#"><i class="text-dark fa-brands fa-x-twitter fs-4"></i></a>
+                                <a href="#"><i class="text-dark fa-brands fa-instagram fs-4"></i></a>
+                                <a href="#"><i class="text-dark fa-brands fa-google-plus-g fs-4"></i></a>
                             </div>
                         </div>
                     </div>
