--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -3,14 +3,16 @@ ul {
     padding: 0px;
 }
 .footer-section {
-  background: linear-gradient(#212324,#2d2f31) ;
+  background: #ededed ;
   position: relative;
+  border-top: 5px solid rgb(224, 224, 224);
+  box-shadow: 0 -10px 15px 0 rgba(0, 0, 0, 0.266);
 }
 .footer-cta {
   border-bottom: 1px solid #373636;
 }
 .single-cta i {
-  color: #f5f5f5;
+  color: #000000;
   font-size: 30px;
   float: left;
   margin-top: 8px;
@@ -20,7 +22,7 @@ ul {
   display: inline-block;
 }
 .cta-text h4 {
-  color: #fff;
+  color: #000000;
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 2px;
@@ -55,7 +57,7 @@ ul {
   line-height: 28px;
 }
 .footer-social-icon span {
-  color: #ffffff;
+  color: #000000;
   display: block;
   font-size: 20px;
   font-weight: 700;
@@ -84,7 +86,7 @@ ul {
   background: #c00808;
 }
 .footer-widget-heading h3 {
-  color: #fff;
+  color: #000000;
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 40px;
@@ -97,7 +99,7 @@ ul {
   bottom: -15px;
   height: 2px;
   width: 50px;
-  background: #ffffff;
+  background: #000000;
 }
 .footer-widget ul li {
   display: inline-block;
@@ -106,7 +108,7 @@ ul {
   margin-bottom: 12px;
 }
 .footer-widget ul li a:hover{
-  color: #ffffff;
+  color: #000000;
 }
 .footer-widget ul li a {
   color: #878787;
@@ -118,16 +120,19 @@ ul {
 }
 .subscribe-form input {
   width: 100%;
-  padding: 14px 28px;
-  background: #2E2E2E;
-  border: 1px solid #2E2E2E;
-  color: #fff;
+  padding: 10px 28px;
+  background: #b1b1b1;
+  border: 3px solid grey;
+  border-radius: 20px;
+  color: #000000;
 }
 .subscribe-form button {
     position: absolute;
     right: 0;
     background: #6f6f6f;
-    padding: 13px 20px;
+    padding: 12px 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
     top: 0;
     border: none;
 }
@@ -146,14 +151,14 @@ ul {
   color: #878787;
 }
 .copyright-text p a{
-  color: #ffffff;
+  color: #c1c1c1;
 }
 .footer-menu li {
   display: inline-block;
   margin-left: 20px;
 }
 .footer-menu li:hover a{
-  color: #fffefd;
+  color: #000000;
 }
 .footer-menu li a {
   font-size: 14px;
